--- a/EpicCamera/app/src/main/res/layout/activity_main.xml
+++ b/EpicCamera/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
 
     <fragment android:name="com.example.katie.epiccamera.LiveCameraFragment"
         android:id="@+id/livecamera"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_width="match_parent"
         />
 
