--- a/EpicCamera/app/src/main/res/layout/live_camera.xml
+++ b/EpicCamera/app/src/main/res/layout/live_camera.xml
@@ -11,4 +11,10 @@
         android:background="#ff0000"
         />
 
+    <TextureView
+        android:id="@+id/camera_texture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+
 </LinearLayout>
