--- a/EpicCamera/app/src/main/res/layout/live_camera.xml
+++ b/EpicCamera/app/src/main/res/layout/live_camera.xml
@@ -10,11 +10,18 @@
         android:text="@string/frag1"
         android:background="#ff0000"
         />
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="click"/>
 
     <TextureView
         android:id="@+id/camera_texture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
+
+
 
 </LinearLayout>
