--- a/OpenCV/Camera/app/src/main/res/layout/mainfragment.xml
+++ b/OpenCV/Camera/app/src/main/res/layout/mainfragment.xml
@@ -1,12 +1,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/textview1"
         android:layout_weight="1"
-        android:layout_width="match_content"
-        android:layout_height="match_content"
+        android:layout_height="0dp"
+        android:layout_width="wrap_content"
         android:text="@string/main" />
+
+    <FrameLayout
+        android:id="@+id/cameraview"
+        android:layout_weight="1"
+        android:layout_height="0px"
+        android:layout_width="match_parent"
+        android:background="?android:attr/detailsElementBackground" />
+
 </LinearLayout>
