--- a/OpenCV/Camera/app/src/main/res/layout/menufragment.xml
+++ b/OpenCV/Camera/app/src/main/res/layout/menufragment.xml
@@ -6,7 +6,7 @@
     <TextView
         android:id="@+id/textview1"
         android:layout_weight="1"
-        android:layout_width="match_content"
-        android:layout_height="match_content"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:text="@string/menu" />
 </LinearLayout>
