--- a/OpenCV/Camera/app/src/main/res/layout/mainfragment.xml
+++ b/OpenCV/Camera/app/src/main/res/layout/mainfragment.xml
@@ -10,6 +10,12 @@
         android:layout_width="wrap_content"
         android:text="@string/main" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="click"/>
+
     <FrameLayout
         android:id="@+id/cameraview"
         android:layout_weight="1"
