--- a/OpenCV/Camera/app/src/main/res/layout/livefragment.xml
+++ b/OpenCV/Camera/app/src/main/res/layout/livefragment.xml
@@ -7,9 +7,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/livefragment"/>
-    <TextureView
-        android:id="@+id/live_texture"
+
+    <com.example.kiki.Camera.AutoFitTextureView
+        android:id="@+id/texture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
+
 </LinearLayout>
