--- a/OpenCV/Camera/app/src/main/res/layout/livefragment.xml
+++ b/OpenCV/Camera/app/src/main/res/layout/livefragment.xml
@@ -10,9 +10,9 @@
 
     <com.example.kiki.Camera.AutoFitTextureView
         android:id="@+id/texture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        />
 
 </LinearLayout>
