--- a/OpenCV/Camera/app/src/main/res/layout/stillfragment.xml
+++ b/OpenCV/Camera/app/src/main/res/layout/stillfragment.xml
@@ -10,9 +10,8 @@
 
     <ImageView
         android:id="@+id/stillimageview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+         />
 
 </LinearLayout>
