--- a/OpenCV/Camera/app/src/main/res/layout/activity_main.xml
+++ b/OpenCV/Camera/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent" />
 
     <fragment class="com.example.kiki.Camera.MenuFragment"
-        android:id="@+id/menufragment"
+        android:id="@xml/menufragment"
         android:layout_weight="1"
         android:layout_width="0px"
         android:layout_height="match_parent" />
