--- a/Impro/app/src/main/res/layout/livefragment.xml
+++ b/Impro/app/src/main/res/layout/livefragment.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content"
         android:text="@string/livefragment"/>
 
-    <com.example.kiki.Camera.AutoFitTextureView
+    <com.example.kiki.impro.AutoFitTextureView
         android:id="@+id/texture"
         android:layout_width="match_parent"
         android:layout_height="0dp"
