--- a/Impro/app/src/main/res/layout/stillfragment.xml
+++ b/Impro/app/src/main/res/layout/stillfragment.xml
@@ -10,8 +10,10 @@
 
     <ImageView
         android:id="@+id/stillimageview"
+        android:contentDescription="@string/picture_description"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
          />
 
 </LinearLayout>
