set Preferences working

--- a/Impro/app/src/main/res/xml/menufragment.xml
+++ b/Impro/app/src/main/res/xml/menufragment.xml
@@ -1,21 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
 
-    <CheckBoxPreference
-        android:key="p_color"
-        android:title="@string/p_color_title"
-        android:summary="@string/p_color_summ"
-        android:defaultValue="true" />
+
     <ListPreference
-        android:dependency="p_color"
         android:key="p_color_key"
         android:title="@string/p_color_title"
         android:dialogTitle="@string/p_color_dialog"
         android:entries="@array/p_color_entries"
-        android:entryValues="@array/p_color_values"
+        android:entryValues="@array/p_color_values" />
 
+    <ListPreference
+        android:key="p_quality_key"
+        android:title="@string/p_quality_title"
+        android:dialogTitle="@string/p_quality_dialog"
+        android:entries="@array/p_quality_entries"
+        android:entryValues="@array/p_quality_values" />
+
+    <com.example.kiki.impro.NumberPickerPreference
+        android:key="p_numberpicker_key"
+        android:title="@string/p_numberpicker_title"
+        android:summary="@string/p_numberpicker_summary"
+        android:positiveButtonText="@android:string/ok"
+        android:negativeButtonText="@android:string/cancel"
         />
+
+
+
+
 </PreferenceScreen>
+
+
