--- a/Impro/app/src/main/res/values/array.xml
+++ b/Impro/app/src/main/res/values/array.xml
@@ -10,4 +10,32 @@
         <item>HSV</item>
         <item>CMYK</item>
     </string-array>
+
+    <string-array name="p_quality_values">
+        <item>10</item>
+        <item>20</item>
+        <item>30</item>
+        <item>40</item>
+        <item>50</item>
+        <item>60</item>
+        <item>70</item>
+        <item>80</item>
+        <item>90</item>
+        <item>100</item>
+    </string-array>
+
+    <string-array name="p_quality_entries">
+        <item>10%</item>
+        <item>20%</item>
+        <item>30%</item>
+        <item>40%</item>
+        <item>50%</item>
+        <item>60%</item>
+        <item>70%</item>
+        <item>80%</item>
+        <item>90%</item>
+        <item>100%</item>
+    </string-array>
+
+
 </resources>
