--- a/ImPro/app/src/main/res/layout/numberpicker_dialog.xml
+++ b/ImPro/app/src/main/res/layout/numberpicker_dialog.xml
@@ -13,6 +13,8 @@
         android:id="@+id/numberPicker1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp" />
+        android:layout_marginTop="64dp"
+        android:descendantFocusability="blocksDescendants"
+        />
 
 </LinearLayout>
