--- a/Impro/app/src/main/res/layout/activity_main.xml
+++ b/Impro/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,34 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/mainlinear"
+        android:layout_alignParentTop="true"
+        android:baselineAligned="false"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <fragment class="com.example.kiki.impro.MenuFragment"
+            android:id="@xml/menufragment"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
+
+        <fragment class="com.example.kiki.impro.ColorbarFragment"
+            android:id="@+id/colorbarfragment"
+            android:layout_weight="2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
     <fragment class="com.example.kiki.impro.MainFragment"
         android:id="@+id/mainfragment"
-        android:layout_weight="1"
-        android:layout_width="0px"
-        android:layout_height="match_parent" />
+        android:layout_below="@id/mainlinear"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent" />
 
-    <fragment class="com.example.kiki.impro.MenuFragment"
-        android:id="@xml/menufragment"
-        android:layout_weight="1"
-        android:layout_width="0px"
-        android:layout_height="match_parent" />
-
-
-</LinearLayout>
+</RelativeLayout>
