--- a/Impro/app/src/main/res/layout/mainfragment.xml
+++ b/Impro/app/src/main/res/layout/mainfragment.xml
@@ -3,24 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textview1"
-        android:layout_weight="1"
-        android:layout_height="0dp"
-        android:layout_width="wrap_content"
-        android:text="@string/main" />
-
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="click"/>
-
     <FrameLayout
         android:id="@+id/cameraview"
-        android:layout_weight="3"
-        android:layout_height="0px"
+        android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:background="?android:attr/detailsElementBackground" />
-
 </LinearLayout>
