--- a/ImPro/app/src/main/res/layout/colorbarfragment.xml
+++ b/ImPro/app/src/main/res/layout/colorbarfragment.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:rsb="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,4 +11,9 @@
         android:layout_width="wrap_content"
         android:text="@string/colorbar" />
 
+    <org.florescu.android.rangeseekbar.RangeSeekBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        org.florescu.android.rangeseekbar.absoluteMaxValue="150"
+        org.florescu.android.rangeseekbar.absoluteMinValue="20"/>
 </LinearLayout>
