--- a/ImPro/app/src/main/res/layout/colorbarfragment.xml
+++ b/ImPro/app/src/main/res/layout/colorbarfragment.xml
@@ -2,31 +2,128 @@
     xmlns:rsb="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="20dp">
 
     <TextView
         android:id="@+id/textview1"
-        android:layout_weight="1"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:text="@string/colorbar" />
+        android:text="@string/colorbar"
+        />
 
-    <org.florescu.android.rangeseekbar.RangeSeekBar
-        android:id="@+id/seekbar1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        rsb:absoluteMaxValue="255"
-        rsb:absoluteMinValue="0"/>
-    <org.florescu.android.rangeseekbar.RangeSeekBar
-        android:id="@+id/seekbar2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        rsb:absoluteMaxValue="255"
-        rsb:absoluteMinValue="0"/>
-    <org.florescu.android.rangeseekbar.RangeSeekBar
-        android:id="@+id/seekbar3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        rsb:absoluteMaxValue="255"
-        rsb:absoluteMinValue="0"/>
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:rsb="http://schemas.android.com/apk/res-auto"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/colortext1"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text=""
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:paddingTop="25dp"
+            android:textSize="25sp"
+            />
+
+        <org.florescu.android.rangeseekbar.RangeSeekBar
+            android:id="@+id/seekbar1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/colortext1"
+            rsb:absoluteMaxValue="255"
+            rsb:absoluteMinValue="0"
+            rsb:showLabels="false"
+            />
+    </RelativeLayout>
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:rsb="http://schemas.android.com/apk/res-auto"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/colortext2"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text=""
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:paddingTop="25dp"
+            android:textSize="25sp"
+            />
+
+        <org.florescu.android.rangeseekbar.RangeSeekBar
+            android:id="@+id/seekbar2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/colortext2"
+            rsb:absoluteMaxValue="255"
+            rsb:absoluteMinValue="0"
+            rsb:showLabels="false"
+            />
+    </RelativeLayout>
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:rsb="http://schemas.android.com/apk/res-auto"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/colortext3"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text=""
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:paddingTop="25dp"
+            android:textSize="25sp"
+            />
+
+        <org.florescu.android.rangeseekbar.RangeSeekBar
+            android:id="@+id/seekbar3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/colortext3"
+            rsb:absoluteMaxValue="255"
+            rsb:absoluteMinValue="0"
+            rsb:showLabels="false"
+            />
+    </RelativeLayout>
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:rsb="http://schemas.android.com/apk/res-auto"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/colortext4"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text=""
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:paddingTop="25dp"
+            android:textSize="25sp"
+            />
+
+        <org.florescu.android.rangeseekbar.RangeSeekBar
+            android:id="@+id/seekbar4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/colortext4"
+            rsb:absoluteMaxValue="255"
+            rsb:absoluteMinValue="0"
+            rsb:showLabels="false"
+            />
+    </RelativeLayout>
+
+
+
 </LinearLayout>
