Katie's smart fixes

--- a/Impro/app/src/main/res/layout/stillfragment.xml
+++ b/Impro/app/src/main/res/layout/stillfragment.xml
@@ -6,9 +6,10 @@
     <ImageView
         android:id="@+id/stillimageview"
         android:contentDescription="@string/picture_description"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:scaleType="centerInside"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:scaleType="matrix"
          />
 </RelativeLayout>
