--- a/Impro/app/src/main/res/layout/livefragment.xml
+++ b/Impro/app/src/main/res/layout/livefragment.xml
@@ -5,8 +5,8 @@
 
     <com.example.kiki.impro.AutoFitTextureView
         android:id="@+id/texture"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         />
