--- a/Impro/app/src/main/res/layout/stillfragment.xml
+++ b/Impro/app/src/main/res/layout/stillfragment.xml
@@ -3,6 +3,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/buttons">
+
+        <Button
+            android:id="@+id/button_saveorig"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_saveorig"
+            />
+        <Button
+            android:id="@+id/button_savefilt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_savefilt"
+            />
+
+    </LinearLayout>
+
     <ImageView
         android:id="@+id/stillimageview"
         android:contentDescription="@string/picture_description"
@@ -10,7 +33,9 @@
         android:layout_height="fill_parent"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:layout_above="@id/buttons"
         android:scaleType="matrix"
+        android:clickable="true"
+        android:onClick="onButtonClicked"
          />
-
 </RelativeLayout>
