--- a/Impro/app/src/main/res/layout/livefragment.xml
+++ b/Impro/app/src/main/res/layout/livefragment.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/button_back"
+        android:id="@+id/button_open"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/button_back"
+        android:text="@string/button_open"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         />
@@ -18,7 +18,7 @@
         android:layout_height="fill_parent"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_above="@id/button_back"
+        android:layout_above="@id/button_open"
         android:clickable="true"
         android:onClick="onButtonClicked"
         />
