--- a/ImPro/app/src/main/res/layout/filenameopener_dialog.xml
+++ b/ImPro/app/src/main/res/layout/filenameopener_dialog.xml
@@ -2,15 +2,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-
-    <fragment
+    <FrameLayout
         android:id="@+id/fileopenerlist"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding = "10dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        class="com.example.kiki.impro.FileOpenerList" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </FrameLayout>
+
+    <!--<fragment-->
+        <!--android:id="@+id/filenameopener_list"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:padding = "10dp"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--class="com.example.kiki.impro.FileOpenerList" />-->
 
     <Button
         android:id="@+id/button_cancel"
