--- a/Impro/app/src/main/res/values/array.xml
+++ b/Impro/app/src/main/res/values/array.xml
@@ -38,9 +38,9 @@
     </string-array>
 
     <string-array name="p_imagetype_values">
-        <item>0</item>
-        <item>1</item>
-        <item>2</item>
+        <item>PNG</item>
+        <item>JPEG</item>
+        <item>WEBP</item>
     </string-array>
 
     <string-array name="p_imagetype_entries">
