--- a/Impro/app/src/main/res/layout/stillfragment.xml
+++ b/Impro/app/src/main/res/layout/stillfragment.xml
@@ -7,8 +7,8 @@
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:id="@+id/buttons">
 
         <Button
@@ -23,19 +23,34 @@
             android:layout_height="wrap_content"
             android:text="@string/button_savefilt"
             />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_above="@id/buttons">
+        <ImageView
+            android:id="@+id/stillimagevieworig"
+            android:contentDescription="@string/picture_description"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            android:scaleType="matrix"
+            android:clickable="true"
+            android:onClick="onButtonClicked"
+            />
+        <ImageView
+            android:id="@+id/stillimageview"
+            android:contentDescription="@string/picture_description"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            android:scaleType="matrix"
+            android:clickable="true"
+            android:onClick="onButtonClicked"
+            />
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/stillimageview"
-        android:contentDescription="@string/picture_description"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_above="@id/buttons"
-        android:scaleType="matrix"
-        android:clickable="true"
-        android:onClick="onButtonClicked"
-         />
 </RelativeLayout>
